- Created a Team class for keeping name and score or team information - Added listeners to radio group, text view and switch - Added logic to increment and decrement scores - Added dialog box to show the winner - Added reset method to reset scores

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Switch
-        android:id="@+id/switch2"
+        android:id="@+id/teamSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleX="2"
@@ -25,9 +26,9 @@
         android:text="0"
         android:textColor="@color/teal_200"
         android:textSize="60dp"
-        app:layout_constraintBottom_toBottomOf="@+id/switch2"
-        app:layout_constraintEnd_toStartOf="@+id/switch2"
-        app:layout_constraintTop_toTopOf="@+id/switch2" />
+        app:layout_constraintBottom_toBottomOf="@+id/teamSwitch"
+        app:layout_constraintEnd_toStartOf="@+id/teamSwitch"
+        app:layout_constraintTop_toTopOf="@+id/teamSwitch" />
 
     <TextView
         android:id="@+id/teamScoreB"
@@ -37,9 +38,9 @@
         android:text="0"
         android:textColor="@color/teal_700"
         android:textSize="60dp"
-        app:layout_constraintBottom_toBottomOf="@+id/switch2"
-        app:layout_constraintStart_toEndOf="@+id/switch2"
-        app:layout_constraintTop_toTopOf="@+id/switch2" />
+        app:layout_constraintBottom_toBottomOf="@+id/teamSwitch"
+        app:layout_constraintStart_toEndOf="@+id/teamSwitch"
+        app:layout_constraintTop_toTopOf="@+id/teamSwitch" />
 
     <TextView
         android:id="@+id/teamNameA"
@@ -56,7 +57,7 @@
         android:layout_marginLeft="30dp"
         android:textColor="@color/teal_200"
         app:layout_constraintBottom_toTopOf="@+id/teamScoreA"
-        app:layout_constraintRight_toLeftOf="@+id/switch2"
+        app:layout_constraintRight_toLeftOf="@+id/teamSwitch"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -74,10 +75,11 @@
         android:layout_marginRight="30dp"
         android:textColor="@color/teal_700"
         app:layout_constraintBottom_toTopOf="@+id/teamScoreB"
-        app:layout_constraintRight_toLeftOf="@+id/switch2"
+        app:layout_constraintRight_toLeftOf="@+id/teamSwitch"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageButton
+        android:id="@+id/plusButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
         app:layout_constraintRight_toLeftOf="@+id/radioGroup"
@@ -87,6 +89,7 @@
         android:src="@drawable/plus"/>
 
     <ImageButton
+        android:id="@+id/minusButton"
         android:layout_width="70dp"
         android:layout_height="70dp"
         app:layout_constraintLeft_toRightOf="@+id/radioGroup"
@@ -103,7 +106,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:checkedButton="@id/twoPoint"
-        app:layout_constraintTop_toBottomOf="@id/switch2">
+        app:layout_constraintTop_toBottomOf="@id/teamSwitch">
 
         <RadioButton
             android:id="@+id/twoPoint"
