--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:scaleX="2"
         android:scaleY="2"
+        android:checked="true"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +31,7 @@
         android:layout_marginEnd="60dp"
         android:text="0"
         android:textColor="@color/teal_200"
-        android:textSize="60dp"
+        style="@style/TeamScoreTextViews"
         app:layout_constraintBottom_toBottomOf="@+id/teamSwitch"
         app:layout_constraintEnd_toStartOf="@+id/teamSwitch"
         app:layout_constraintTop_toTopOf="@+id/teamSwitch" />
@@ -45,7 +46,7 @@
         android:layout_marginStart="60dp"
         android:text="0"
         android:textColor="@color/teal_700"
-        android:textSize="60dp"
+        style="@style/TeamScoreTextViews"
         app:layout_constraintBottom_toBottomOf="@+id/teamSwitch"
         app:layout_constraintStart_toEndOf="@+id/teamSwitch"
         app:layout_constraintTop_toTopOf="@+id/teamSwitch" />
@@ -60,7 +61,7 @@
         android:text="* Team who crosses 100 points wins *"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:textColor="@color/black"
+        android:textSize="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -71,14 +72,10 @@
         android:id="@+id/teamNameA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxWidth="140dp"
         android:layout_marginBottom="70dp"
-        android:autoSizeMaxTextSize="40sp"
-        android:autoSizeMinTextSize="5sp"
-        android:autoSizeStepGranularity="2sp"
-        android:text="Team A"
-        android:textSize="30sp"
         android:layout_marginLeft="30dp"
+        android:text="Team A"
+        style="@style/TeamNameEditTextViews"
         android:textColor="@color/teal_200"
         android:imeOptions="actionDone"
         app:layout_constraintBottom_toTopOf="@+id/teamScoreA"
@@ -91,14 +88,10 @@
         android:id="@+id/teamNameB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxWidth="140dp"
         android:layout_marginBottom="70dp"
-        android:autoSizeMaxTextSize="40sp"
-        android:autoSizeMinTextSize="10sp"
-        android:autoSizeStepGranularity="2sp"
         android:text="Team B"
-        android:textSize="30sp"
         android:layout_marginRight="30dp"
+        style="@style/TeamNameEditTextViews"
         android:textColor="@color/teal_700"
         android:imeOptions="actionDone"
         app:layout_constraintBottom_toTopOf="@+id/teamScoreB"
@@ -109,8 +102,7 @@
     !-- Added padding left to radio group --
     <ImageButton
         android:id="@+id/plusButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        style="@style/ScoreActionButtons"
         app:layout_constraintRight_toLeftOf="@+id/radioGroup"
         app:layout_constraintTop_toTopOf="@+id/radioGroup"
         app:layout_constraintBottom_toBottomOf="@id/radioGroup"
@@ -122,8 +114,7 @@
     !-- Added padding right to radio group --
     <ImageButton
         android:id="@+id/minusButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        style="@style/ScoreActionButtons"
         app:layout_constraintLeft_toRightOf="@+id/radioGroup"
         app:layout_constraintTop_toTopOf="@+id/radioGroup"
         app:layout_constraintBottom_toBottomOf="@id/radioGroup"
@@ -148,28 +139,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2 points"
-            android:textSize="25dp"/>
+            style="@style/RadioButtons"/>
 
         <RadioButton
             android:id="@+id/fourPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4 points"
-            android:textSize="25dp"/>
+            style="@style/RadioButtons"/>
 
         <RadioButton
             android:id="@+id/sixPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="6 points"
-            android:textSize="25dp"/>
+            style="@style/RadioButtons"/>
 
         <RadioButton
             android:id="@+id/eightPoint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="8 points"
-            android:textSize="25dp"/>
+            style="@style/RadioButtons"/>
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
