--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -6,11 +6,23 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/purple_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!-- This provides basic text color according to theme -->
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <!-- This provides them to Score Button (plus minus) -->
+        <item name="materialButtonStyle">@style/ScoreButton</item>
+
     </style>
+
+    <!-- Overrides Parent Image button style with some back ground tint -->
+    <style name="ScoreButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:backgroundTint">@color/teal_200</item>
+    </style>
+
 </resources>
